# analisando_fiis

./: .gitignore  README.md  analisando-fiis.ipynb  pyproject.toml
data_bronze/: dados_fundamentalistas_acoes.json  dados_fundamentalistas_fiis.json
src/: importa_dados.py
