[tool.poetry]
name = "analisando-fiis"
version = "0.1.0"
description = ""
authors = ["Mateus Pinheiro <mateus.mcpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
yfinance = "^0.2.61"
fundamentus = "^0.2.0"
selenium = "^4.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
